# roadtalk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  compose.yaml
.github/: pull_request_template.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  health.py  logging.py  main.py  middleware.py  problems.py
backend/app/api/: auth.py  identity.py  location.py  ptt.py  recovery.py  system.py
backend/app/auth/: __init__.py  schemas.py  security.py  service.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/identity/: __init__.py  avatars.py  callsigns.py  schemas.py  service.py
backend/app/location/: __init__.py  consent.py  limiter.py  nearby.py  quality.py  schemas.py  service.py
backend/app/ptt/: __init__.py  limiter.py  provider.py  schemas.py  service.py
backend/app/recovery/: __init__.py  limiter.py  schemas.py  security.py  service.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_account_device_session.py  0002_profile.py  0003_recovery_credential.py  0004_location_persistence.py  0005_media_grant.py  0006_receive_grant_idempotency.py
backend/tests/: conftest.py  test_auth_integration.py  test_auth_routes.py  test_auth_security.py  test_auth_service.py  test_avatar_catalog.py  test_callsign_integration.py  test_callsigns.py  test_health.py  test_identity_hardening.py  test_identity_routes.py  test_identity_service.py  test_location_consent.py  test_location_consent_database.py  test_location_database.py  test_location_limiter.py  test_location_model.py  test_location_nearby.py  test_location_nearby_database.py  test_location_quality.py  test_location_quality_database.py  test_location_routes.py  test_location_service.py  test_logging.py  test_models.py  test_profile_api.py  test_profile_database.py  test_profile_model.py  test_profile_routes.py  test_ptt_config.py  test_ptt_grant_database.py  test_ptt_limiter.py  test_ptt_model.py  test_ptt_provider.py  test_ptt_routes.py  test_recovery_database.py  test_recovery_limiter.py  test_recovery_routes.py  test_recovery_security.py  test_recovery_service.py  (+1 more)
docs/: AGILE_WORKFLOW.md  PROJECT_GOVERNANCE.md  README.md  SPRINT_PLAN.md
(+148 files in other folders)
